--- a/style.css
+++ b/style.css
@@ -180,8 +180,13 @@ body {
   }
  
 p.copyright {
-    color: #fff;
+    color: white;
     line-height: 40px;
     font-size: 0.7em;
     position: fixed;
+    text-align: center;
+    font-size: 15px;
+    width: 100%;
+    background-color:#020348 ;
+    height: auto;padding-bottom: 0.9rem;
 }
